--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,11 @@
     <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="/assets/fontawesome/css/all.min.css">
     <link rel="stylesheet" href="/assets/css/styles.css">
+    <link href="assets/icofont/icofont.min.css" rel="stylesheet">
+    <link href="assets/boxicons/css/boxicons.min.css" rel="stylesheet">
+    <link href="assets/venobox/venobox.css" rel="stylesheet">
+    <link href="assets/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
+    <link href="assets/aos/aos.css" rel="stylesheet">
   </head>
   <body style="background:#e2e8f0">
     <div id="app"></div>
