--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,10 @@
     <link href="assets/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
     <link href="assets/aos/aos.css" rel="stylesheet">
     
-
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
     
   </head>
   <body style="background:#e2e8f0">
